# dr-extract-rs

./: .gitignore  Cargo.toml  README.md
.github/workflows/: rust_build_test.yml
examples/: dump.rs  simple.rs
src/: lib.rs
src/chunk/: audo.rs  bgnd.rs  font.rs  gen8.rs  mod.rs  optn.rs  sond.rs  sprt.rs  tpag.rs  txtr.rs
