[package]
name = "dr-extract"
version = "0.1.0"
edition = "2018"
description = "WIP Rust library for parsing and extracting assets from DELTARUNE's data.win."
license = "TBD"
repository = "https://github.com/PieKing1215/dr-extract-rs"
keywords = ["extractor", "unpacker", "gamemaker", "deltarune"]
categories = ["encoding", "multimedia"]

[dependencies]
anyhow = "1.0"
byteorder = "1.4"
tuple-transpose = "0.1"
image = "0.23"
